p2_files/parser.output
Terminals unused in grammar

    WHILE


Grammar

    0 $accept: program "end file"

    1 program: globals

    2 globals: globals decl
    3        | %empty

    4 decl: varDecl SEMICOLON
    5     | fnDecl

    6 varDecl: type id

    7 type: INT
    8     | INTPTR
    9     | BOOL
   10     | BOOLPTR
   11     | CHAR
   12     | CHARPTR
   13     | VOID

   14 fnDecl: type id formals fnBody

   15 formals: LPAREN RPAREN
   16        | LPAREN formalsList RPAREN

   17 formalsList: formalDecl
   18            | formalDecl COMMA formalsList

   19 formalDecl: type id

   20 fnBody: LCURLY stmtList RCURLY

   21 stmtList: stmtList stmt
   22         | %empty

   23 stmt: varDecl SEMICOLON
   24     | assignExp SEMICOLON
   25     | lval DASHDASH SEMICOLON
   26     | lval CROSSCROSS SEMICOLON
   27     | FROMCONSOLE lval SEMICOLON
   28     | TOCONSOLE exp SEMICOLON
   29     | IF LPAREN exp RPAREN LCURLY stmtList RCURLY
   30     | IF LPAREN exp RPAREN LCURLY stmtList RCURLY ELSE LCURLY stmtList RCURLY
   31     | RETURN exp SEMICOLON
   32     | RETURN SEMICOLON
   33     | fncall SEMICOLON

   34 assignExp: lval ASSIGN exp

   35 fncall: id LPAREN RPAREN
   36       | id LPAREN actualsList RPAREN

   37 actualsList: exp
   38            | actualsList COMMA exp

   39 exp: assignExp
   40    | exp DASH exp
   41    | exp CROSS exp
   42    | exp STAR exp
   43    | exp SLASH exp
   44    | exp AND exp
   45    | exp OR exp
   46    | exp EQUALS exp
   47    | exp NOTEQUALS exp
   48    | exp GREATER exp
   49    | exp GREATEREQ exp
   50    | exp LESS exp
   51    | exp LESSEQ exp
   52    | NOT exp
   53    | DASH term
   54    | term

   55 term: lval
   56     | INTLITERAL
   57     | STRLITERAL
   58     | CHARLIT
   59     | TRUE
   60     | FALSE
   61     | NULLPTR
   62     | LPAREN exp RPAREN
   63     | fncall

   64 lval: id
   65     | id LBRACE exp RBRACE
   66     | AT id
   67     | CARAT id

   68 id: ID


Terminals, with rules where they appear

    "end file" (0) 0
    error (256)
    AND <transToken> (258) 44
    AT <transToken> (259) 66
    ASSIGN <transToken> (260) 34
    BOOL <transToken> (261) 9
    BOOLPTR <transToken> (262) 10
    CARAT <transToken> (263) 67
    CHAR <transToken> (264) 11
    CHARLIT <transCharToken> (265) 58
    CHARPTR <transToken> (266) 12
    COMMA <transToken> (267) 18 38
    CROSS <transToken> (268) 41
    CROSSCROSS <transToken> (269) 26
    DASH <transToken> (270) 40 53
    DASHDASH <transToken> (271) 25
    ELSE <transToken> (272) 30
    EQUALS <transToken> (273) 46
    FALSE <transToken> (274) 60
    FROMCONSOLE <transToken> (275) 27
    ID <transIDToken> (276) 68
    IF <transToken> (277) 29 30
    INT <transToken> (278) 7
    INTLITERAL <transIntToken> (279) 56
    INTPTR <transToken> (280) 8
    GREATER <transToken> (281) 48
    GREATEREQ <transToken> (282) 49
    LBRACE <transToken> (283) 65
    LCURLY <transToken> (284) 20 29 30
    LESS <transToken> (285) 50
    LESSEQ <transToken> (286) 51
    LPAREN <transToken> (287) 15 16 29 30 35 36 62
    NOT <transToken> (288) 52
    NOTEQUALS <transToken> (289) 47
    NULLPTR <transToken> (290) 61
    OR <transToken> (291) 45
    RBRACE <transToken> (292) 65
    RCURLY <transToken> (293) 20 29 30
    RETURN <transToken> (294) 31 32
    RPAREN <transToken> (295) 15 16 29 30 35 36 62
    SEMICOLON <transToken> (296) 4 23 24 25 26 27 28 31 32 33
    SLASH <transToken> (297) 43
    STAR <transToken> (298) 42
    STRLITERAL <transStrToken> (299) 57
    TOCONSOLE <transToken> (300) 28
    TRUE <transToken> (301) 59
    VOID <transToken> (302) 13
    WHILE <transToken> (303)


Nonterminals, with rules where they appear

    $accept (49)
        on left: 0
    program (50)
        on left: 1
        on right: 0
    globals (51)
        on left: 2 3
        on right: 1 2
    decl (52)
        on left: 4 5
        on right: 2
    varDecl (53)
        on left: 6
        on right: 4 23
    type (54)
        on left: 7 8 9 10 11 12 13
        on right: 6 14 19
    fnDecl (55)
        on left: 14
        on right: 5
    formals (56)
        on left: 15 16
        on right: 14
    formalsList (57)
        on left: 17 18
        on right: 16 18
    formalDecl (58)
        on left: 19
        on right: 17 18
    fnBody (59)
        on left: 20
        on right: 14
    stmtList (60)
        on left: 21 22
        on right: 20 21 29 30
    stmt (61)
        on left: 23 24 25 26 27 28 29 30 31 32 33
        on right: 21
    assignExp (62)
        on left: 34
        on right: 24 39
    fncall (63)
        on left: 35 36
        on right: 33 63
    actualsList (64)
        on left: 37 38
        on right: 36 38
    exp (65)
        on left: 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54
        on right: 28 29 30 31 34 37 38 40 41 42 43 44 45 46 47 48 49 50 51 52 62 65
    term (66)
        on left: 55 56 57 58 59 60 61 62 63
        on right: 53 54
    lval (67)
        on left: 64 65 66 67
        on right: 25 26 27 34 55
    id (68)
        on left: 68
        on right: 6 14 19 35 36 64 65 66 67


State 0

    0 $accept: . program "end file"

    $default  reduce using rule 3 (globals)

    program  go to state 1
    globals  go to state 2


State 1

    0 $accept: program . "end file"

    "end file"  shift, and go to state 3


State 2

    1 program: globals .
    2 globals: globals . decl

    BOOL     shift, and go to state 4
    BOOLPTR  shift, and go to state 5
    CHAR     shift, and go to state 6
    CHARPTR  shift, and go to state 7
    INT      shift, and go to state 8
    INTPTR   shift, and go to state 9
    VOID     shift, and go to state 10

    $default  reduce using rule 1 (program)

    decl     go to state 11
    varDecl  go to state 12
    type     go to state 13
    fnDecl   go to state 14


State 3

    0 $accept: program "end file" .

    $default  accept


State 4

    9 type: BOOL .

    $default  reduce using rule 9 (type)


State 5

   10 type: BOOLPTR .

    $default  reduce using rule 10 (type)


State 6

   11 type: CHAR .

    $default  reduce using rule 11 (type)


State 7

   12 type: CHARPTR .

    $default  reduce using rule 12 (type)


State 8

    7 type: INT .

    $default  reduce using rule 7 (type)


State 9

    8 type: INTPTR .

    $default  reduce using rule 8 (type)


State 10

   13 type: VOID .

    $default  reduce using rule 13 (type)


State 11

    2 globals: globals decl .

    $default  reduce using rule 2 (globals)


State 12

    4 decl: varDecl . SEMICOLON

    SEMICOLON  shift, and go to state 15


State 13

    6 varDecl: type . id
   14 fnDecl: type . id formals fnBody

    ID  shift, and go to state 16

    id  go to state 17


State 14

    5 decl: fnDecl .

    $default  reduce using rule 5 (decl)


State 15

    4 decl: varDecl SEMICOLON .

    $default  reduce using rule 4 (decl)


State 16

   68 id: ID .

    $default  reduce using rule 68 (id)


State 17

    6 varDecl: type id .
   14 fnDecl: type id . formals fnBody

    LPAREN  shift, and go to state 18

    $default  reduce using rule 6 (varDecl)

    formals  go to state 19


State 18

   15 formals: LPAREN . RPAREN
   16        | LPAREN . formalsList RPAREN

    BOOL     shift, and go to state 4
    BOOLPTR  shift, and go to state 5
    CHAR     shift, and go to state 6
    CHARPTR  shift, and go to state 7
    INT      shift, and go to state 8
    INTPTR   shift, and go to state 9
    RPAREN   shift, and go to state 20
    VOID     shift, and go to state 10

    type         go to state 21
    formalsList  go to state 22
    formalDecl   go to state 23


State 19

   14 fnDecl: type id formals . fnBody

    LCURLY  shift, and go to state 24

    fnBody  go to state 25


State 20

   15 formals: LPAREN RPAREN .

    $default  reduce using rule 15 (formals)


State 21

   19 formalDecl: type . id

    ID  shift, and go to state 16

    id  go to state 26


State 22

   16 formals: LPAREN formalsList . RPAREN

    RPAREN  shift, and go to state 27


State 23

   17 formalsList: formalDecl .
   18            | formalDecl . COMMA formalsList

    COMMA  shift, and go to state 28

    $default  reduce using rule 17 (formalsList)


State 24

   20 fnBody: LCURLY . stmtList RCURLY

    $default  reduce using rule 22 (stmtList)

    stmtList  go to state 29


State 25

   14 fnDecl: type id formals fnBody .

    $default  reduce using rule 14 (fnDecl)


State 26

   19 formalDecl: type id .

    $default  reduce using rule 19 (formalDecl)


State 27

   16 formals: LPAREN formalsList RPAREN .

    $default  reduce using rule 16 (formals)


State 28

   18 formalsList: formalDecl COMMA . formalsList

    BOOL     shift, and go to state 4
    BOOLPTR  shift, and go to state 5
    CHAR     shift, and go to state 6
    CHARPTR  shift, and go to state 7
    INT      shift, and go to state 8
    INTPTR   shift, and go to state 9
    VOID     shift, and go to state 10

    type         go to state 21
    formalsList  go to state 30
    formalDecl   go to state 23


State 29

   20 fnBody: LCURLY stmtList . RCURLY
   21 stmtList: stmtList . stmt

    AT           shift, and go to state 31
    BOOL         shift, and go to state 4
    BOOLPTR      shift, and go to state 5
    CARAT        shift, and go to state 32
    CHAR         shift, and go to state 6
    CHARPTR      shift, and go to state 7
    FROMCONSOLE  shift, and go to state 33
    ID           shift, and go to state 16
    IF           shift, and go to state 34
    INT          shift, and go to state 8
    INTPTR       shift, and go to state 9
    RCURLY       shift, and go to state 35
    RETURN       shift, and go to state 36
    TOCONSOLE    shift, and go to state 37
    VOID         shift, and go to state 10

    varDecl    go to state 38
    type       go to state 39
    stmt       go to state 40
    assignExp  go to state 41
    fncall     go to state 42
    lval       go to state 43
    id         go to state 44


State 30

   18 formalsList: formalDecl COMMA formalsList .

    $default  reduce using rule 18 (formalsList)


State 31

   66 lval: AT . id

    ID  shift, and go to state 16

    id  go to state 45


State 32

   67 lval: CARAT . id

    ID  shift, and go to state 16

    id  go to state 46


State 33

   27 stmt: FROMCONSOLE . lval SEMICOLON

    AT     shift, and go to state 31
    CARAT  shift, and go to state 32
    ID     shift, and go to state 16

    lval  go to state 47
    id    go to state 48


State 34

   29 stmt: IF . LPAREN exp RPAREN LCURLY stmtList RCURLY
   30     | IF . LPAREN exp RPAREN LCURLY stmtList RCURLY ELSE LCURLY stmtList RCURLY

    LPAREN  shift, and go to state 49


State 35

   20 fnBody: LCURLY stmtList RCURLY .

    $default  reduce using rule 20 (fnBody)


State 36

   31 stmt: RETURN . exp SEMICOLON
   32     | RETURN . SEMICOLON

    AT          shift, and go to state 31
    CARAT       shift, and go to state 32
    CHARLIT     shift, and go to state 50
    DASH        shift, and go to state 51
    FALSE       shift, and go to state 52
    ID          shift, and go to state 16
    INTLITERAL  shift, and go to state 53
    LPAREN      shift, and go to state 54
    NOT         shift, and go to state 55
    NULLPTR     shift, and go to state 56
    SEMICOLON   shift, and go to state 57
    STRLITERAL  shift, and go to state 58
    TRUE        shift, and go to state 59

    assignExp  go to state 60
    fncall     go to state 61
    exp        go to state 62
    term       go to state 63
    lval       go to state 64
    id         go to state 44


State 37

   28 stmt: TOCONSOLE . exp SEMICOLON

    AT          shift, and go to state 31
    CARAT       shift, and go to state 32
    CHARLIT     shift, and go to state 50
    DASH        shift, and go to state 51
    FALSE       shift, and go to state 52
    ID          shift, and go to state 16
    INTLITERAL  shift, and go to state 53
    LPAREN      shift, and go to state 54
    NOT         shift, and go to state 55
    NULLPTR     shift, and go to state 56
    STRLITERAL  shift, and go to state 58
    TRUE        shift, and go to state 59

    assignExp  go to state 60
    fncall     go to state 61
    exp        go to state 65
    term       go to state 63
    lval       go to state 64
    id         go to state 44


State 38

   23 stmt: varDecl . SEMICOLON

    SEMICOLON  shift, and go to state 66


State 39

    6 varDecl: type . id

    ID  shift, and go to state 16

    id  go to state 67


State 40

   21 stmtList: stmtList stmt .

    $default  reduce using rule 21 (stmtList)


State 41

   24 stmt: assignExp . SEMICOLON

    SEMICOLON  shift, and go to state 68


State 42

   33 stmt: fncall . SEMICOLON

    SEMICOLON  shift, and go to state 69


State 43

   25 stmt: lval . DASHDASH SEMICOLON
   26     | lval . CROSSCROSS SEMICOLON
   34 assignExp: lval . ASSIGN exp

    ASSIGN      shift, and go to state 70
    CROSSCROSS  shift, and go to state 71
    DASHDASH    shift, and go to state 72


State 44

   35 fncall: id . LPAREN RPAREN
   36       | id . LPAREN actualsList RPAREN
   64 lval: id .
   65     | id . LBRACE exp RBRACE

    LBRACE  shift, and go to state 73
    LPAREN  shift, and go to state 74

    $default  reduce using rule 64 (lval)


State 45

   66 lval: AT id .

    $default  reduce using rule 66 (lval)


State 46

   67 lval: CARAT id .

    $default  reduce using rule 67 (lval)


State 47

   27 stmt: FROMCONSOLE lval . SEMICOLON

    SEMICOLON  shift, and go to state 75


State 48

   64 lval: id .
   65     | id . LBRACE exp RBRACE

    LBRACE  shift, and go to state 73

    $default  reduce using rule 64 (lval)


State 49

   29 stmt: IF LPAREN . exp RPAREN LCURLY stmtList RCURLY
   30     | IF LPAREN . exp RPAREN LCURLY stmtList RCURLY ELSE LCURLY stmtList RCURLY

    AT          shift, and go to state 31
    CARAT       shift, and go to state 32
    CHARLIT     shift, and go to state 50
    DASH        shift, and go to state 51
    FALSE       shift, and go to state 52
    ID          shift, and go to state 16
    INTLITERAL  shift, and go to state 53
    LPAREN      shift, and go to state 54
    NOT         shift, and go to state 55
    NULLPTR     shift, and go to state 56
    STRLITERAL  shift, and go to state 58
    TRUE        shift, and go to state 59

    assignExp  go to state 60
    fncall     go to state 61
    exp        go to state 76
    term       go to state 63
    lval       go to state 64
    id         go to state 44


State 50

   58 term: CHARLIT .

    $default  reduce using rule 58 (term)


State 51

   53 exp: DASH . term

    AT          shift, and go to state 31
    CARAT       shift, and go to state 32
    CHARLIT     shift, and go to state 50
    FALSE       shift, and go to state 52
    ID          shift, and go to state 16
    INTLITERAL  shift, and go to state 53
    LPAREN      shift, and go to state 54
    NULLPTR     shift, and go to state 56
    STRLITERAL  shift, and go to state 58
    TRUE        shift, and go to state 59

    fncall  go to state 61
    term    go to state 77
    lval    go to state 78
    id      go to state 44


State 52

   60 term: FALSE .

    $default  reduce using rule 60 (term)


State 53

   56 term: INTLITERAL .

    $default  reduce using rule 56 (term)


State 54

   62 term: LPAREN . exp RPAREN

    AT          shift, and go to state 31
    CARAT       shift, and go to state 32
    CHARLIT     shift, and go to state 50
    DASH        shift, and go to state 51
    FALSE       shift, and go to state 52
    ID          shift, and go to state 16
    INTLITERAL  shift, and go to state 53
    LPAREN      shift, and go to state 54
    NOT         shift, and go to state 55
    NULLPTR     shift, and go to state 56
    STRLITERAL  shift, and go to state 58
    TRUE        shift, and go to state 59

    assignExp  go to state 60
    fncall     go to state 61
    exp        go to state 79
    term       go to state 63
    lval       go to state 64
    id         go to state 44


State 55

   52 exp: NOT . exp

    AT          shift, and go to state 31
    CARAT       shift, and go to state 32
    CHARLIT     shift, and go to state 50
    DASH        shift, and go to state 51
    FALSE       shift, and go to state 52
    ID          shift, and go to state 16
    INTLITERAL  shift, and go to state 53
    LPAREN      shift, and go to state 54
    NOT         shift, and go to state 55
    NULLPTR     shift, and go to state 56
    STRLITERAL  shift, and go to state 58
    TRUE        shift, and go to state 59

    assignExp  go to state 60
    fncall     go to state 61
    exp        go to state 80
    term       go to state 63
    lval       go to state 64
    id         go to state 44


State 56

   61 term: NULLPTR .

    $default  reduce using rule 61 (term)


State 57

   32 stmt: RETURN SEMICOLON .

    $default  reduce using rule 32 (stmt)


State 58

   57 term: STRLITERAL .

    $default  reduce using rule 57 (term)


State 59

   59 term: TRUE .

    $default  reduce using rule 59 (term)


State 60

   39 exp: assignExp .

    $default  reduce using rule 39 (exp)


State 61

   63 term: fncall .

    $default  reduce using rule 63 (term)


State 62

   31 stmt: RETURN exp . SEMICOLON
   40 exp: exp . DASH exp
   41    | exp . CROSS exp
   42    | exp . STAR exp
   43    | exp . SLASH exp
   44    | exp . AND exp
   45    | exp . OR exp
   46    | exp . EQUALS exp
   47    | exp . NOTEQUALS exp
   48    | exp . GREATER exp
   49    | exp . GREATEREQ exp
   50    | exp . LESS exp
   51    | exp . LESSEQ exp

    AND        shift, and go to state 81
    CROSS      shift, and go to state 82
    DASH       shift, and go to state 83
    EQUALS     shift, and go to state 84
    GREATER    shift, and go to state 85
    GREATEREQ  shift, and go to state 86
    LESS       shift, and go to state 87
    LESSEQ     shift, and go to state 88
    NOTEQUALS  shift, and go to state 89
    OR         shift, and go to state 90
    SEMICOLON  shift, and go to state 91
    SLASH      shift, and go to state 92
    STAR       shift, and go to state 93


State 63

   54 exp: term .

    $default  reduce using rule 54 (exp)


State 64

   34 assignExp: lval . ASSIGN exp
   55 term: lval .

    ASSIGN  shift, and go to state 70

    $default  reduce using rule 55 (term)


State 65

   28 stmt: TOCONSOLE exp . SEMICOLON
   40 exp: exp . DASH exp
   41    | exp . CROSS exp
   42    | exp . STAR exp
   43    | exp . SLASH exp
   44    | exp . AND exp
   45    | exp . OR exp
   46    | exp . EQUALS exp
   47    | exp . NOTEQUALS exp
   48    | exp . GREATER exp
   49    | exp . GREATEREQ exp
   50    | exp . LESS exp
   51    | exp . LESSEQ exp

    AND        shift, and go to state 81
    CROSS      shift, and go to state 82
    DASH       shift, and go to state 83
    EQUALS     shift, and go to state 84
    GREATER    shift, and go to state 85
    GREATEREQ  shift, and go to state 86
    LESS       shift, and go to state 87
    LESSEQ     shift, and go to state 88
    NOTEQUALS  shift, and go to state 89
    OR         shift, and go to state 90
    SEMICOLON  shift, and go to state 94
    SLASH      shift, and go to state 92
    STAR       shift, and go to state 93


State 66

   23 stmt: varDecl SEMICOLON .

    $default  reduce using rule 23 (stmt)


State 67

    6 varDecl: type id .

    $default  reduce using rule 6 (varDecl)


State 68

   24 stmt: assignExp SEMICOLON .

    $default  reduce using rule 24 (stmt)


State 69

   33 stmt: fncall SEMICOLON .

    $default  reduce using rule 33 (stmt)


State 70

   34 assignExp: lval ASSIGN . exp

    AT          shift, and go to state 31
    CARAT       shift, and go to state 32
    CHARLIT     shift, and go to state 50
    DASH        shift, and go to state 51
    FALSE       shift, and go to state 52
    ID          shift, and go to state 16
    INTLITERAL  shift, and go to state 53
    LPAREN      shift, and go to state 54
    NOT         shift, and go to state 55
    NULLPTR     shift, and go to state 56
    STRLITERAL  shift, and go to state 58
    TRUE        shift, and go to state 59

    assignExp  go to state 60
    fncall     go to state 61
    exp        go to state 95
    term       go to state 63
    lval       go to state 64
    id         go to state 44


State 71

   26 stmt: lval CROSSCROSS . SEMICOLON

    SEMICOLON  shift, and go to state 96


State 72

   25 stmt: lval DASHDASH . SEMICOLON

    SEMICOLON  shift, and go to state 97


State 73

   65 lval: id LBRACE . exp RBRACE

    AT          shift, and go to state 31
    CARAT       shift, and go to state 32
    CHARLIT     shift, and go to state 50
    DASH        shift, and go to state 51
    FALSE       shift, and go to state 52
    ID          shift, and go to state 16
    INTLITERAL  shift, and go to state 53
    LPAREN      shift, and go to state 54
    NOT         shift, and go to state 55
    NULLPTR     shift, and go to state 56
    STRLITERAL  shift, and go to state 58
    TRUE        shift, and go to state 59

    assignExp  go to state 60
    fncall     go to state 61
    exp        go to state 98
    term       go to state 63
    lval       go to state 64
    id         go to state 44


State 74

   35 fncall: id LPAREN . RPAREN
   36       | id LPAREN . actualsList RPAREN

    AT          shift, and go to state 31
    CARAT       shift, and go to state 32
    CHARLIT     shift, and go to state 50
    DASH        shift, and go to state 51
    FALSE       shift, and go to state 52
    ID          shift, and go to state 16
    INTLITERAL  shift, and go to state 53
    LPAREN      shift, and go to state 54
    NOT         shift, and go to state 55
    NULLPTR     shift, and go to state 56
    RPAREN      shift, and go to state 99
    STRLITERAL  shift, and go to state 58
    TRUE        shift, and go to state 59

    assignExp    go to state 60
    fncall       go to state 61
    actualsList  go to state 100
    exp          go to state 101
    term         go to state 63
    lval         go to state 64
    id           go to state 44


State 75

   27 stmt: FROMCONSOLE lval SEMICOLON .

    $default  reduce using rule 27 (stmt)


State 76

   29 stmt: IF LPAREN exp . RPAREN LCURLY stmtList RCURLY
   30     | IF LPAREN exp . RPAREN LCURLY stmtList RCURLY ELSE LCURLY stmtList RCURLY
   40 exp: exp . DASH exp
   41    | exp . CROSS exp
   42    | exp . STAR exp
   43    | exp . SLASH exp
   44    | exp . AND exp
   45    | exp . OR exp
   46    | exp . EQUALS exp
   47    | exp . NOTEQUALS exp
   48    | exp . GREATER exp
   49    | exp . GREATEREQ exp
   50    | exp . LESS exp
   51    | exp . LESSEQ exp

    AND        shift, and go to state 81
    CROSS      shift, and go to state 82
    DASH       shift, and go to state 83
    EQUALS     shift, and go to state 84
    GREATER    shift, and go to state 85
    GREATEREQ  shift, and go to state 86
    LESS       shift, and go to state 87
    LESSEQ     shift, and go to state 88
    NOTEQUALS  shift, and go to state 89
    OR         shift, and go to state 90
    RPAREN     shift, and go to state 102
    SLASH      shift, and go to state 92
    STAR       shift, and go to state 93


State 77

   53 exp: DASH term .

    $default  reduce using rule 53 (exp)


State 78

   55 term: lval .

    $default  reduce using rule 55 (term)


State 79

   40 exp: exp . DASH exp
   41    | exp . CROSS exp
   42    | exp . STAR exp
   43    | exp . SLASH exp
   44    | exp . AND exp
   45    | exp . OR exp
   46    | exp . EQUALS exp
   47    | exp . NOTEQUALS exp
   48    | exp . GREATER exp
   49    | exp . GREATEREQ exp
   50    | exp . LESS exp
   51    | exp . LESSEQ exp
   62 term: LPAREN exp . RPAREN

    AND        shift, and go to state 81
    CROSS      shift, and go to state 82
    DASH       shift, and go to state 83
    EQUALS     shift, and go to state 84
    GREATER    shift, and go to state 85
    GREATEREQ  shift, and go to state 86
    LESS       shift, and go to state 87
    LESSEQ     shift, and go to state 88
    NOTEQUALS  shift, and go to state 89
    OR         shift, and go to state 90
    RPAREN     shift, and go to state 103
    SLASH      shift, and go to state 92
    STAR       shift, and go to state 93


State 80

   40 exp: exp . DASH exp
   41    | exp . CROSS exp
   42    | exp . STAR exp
   43    | exp . SLASH exp
   44    | exp . AND exp
   45    | exp . OR exp
   46    | exp . EQUALS exp
   47    | exp . NOTEQUALS exp
   48    | exp . GREATER exp
   49    | exp . GREATEREQ exp
   50    | exp . LESS exp
   51    | exp . LESSEQ exp
   52    | NOT exp .

    AND        shift, and go to state 81
    CROSS      shift, and go to state 82
    DASH       shift, and go to state 83
    EQUALS     shift, and go to state 84
    GREATER    shift, and go to state 85
    GREATEREQ  shift, and go to state 86
    LESS       shift, and go to state 87
    LESSEQ     shift, and go to state 88
    NOTEQUALS  shift, and go to state 89
    OR         shift, and go to state 90
    SLASH      shift, and go to state 92
    STAR       shift, and go to state 93

    $default  reduce using rule 52 (exp)


State 81

   44 exp: exp AND . exp

    AT          shift, and go to state 31
    CARAT       shift, and go to state 32
    CHARLIT     shift, and go to state 50
    DASH        shift, and go to state 51
    FALSE       shift, and go to state 52
    ID          shift, and go to state 16
    INTLITERAL  shift, and go to state 53
    LPAREN      shift, and go to state 54
    NOT         shift, and go to state 55
    NULLPTR     shift, and go to state 56
    STRLITERAL  shift, and go to state 58
    TRUE        shift, and go to state 59

    assignExp  go to state 60
    fncall     go to state 61
    exp        go to state 104
    term       go to state 63
    lval       go to state 64
    id         go to state 44


State 82

   41 exp: exp CROSS . exp

    AT          shift, and go to state 31
    CARAT       shift, and go to state 32
    CHARLIT     shift, and go to state 50
    DASH        shift, and go to state 51
    FALSE       shift, and go to state 52
    ID          shift, and go to state 16
    INTLITERAL  shift, and go to state 53
    LPAREN      shift, and go to state 54
    NOT         shift, and go to state 55
    NULLPTR     shift, and go to state 56
    STRLITERAL  shift, and go to state 58
    TRUE        shift, and go to state 59

    assignExp  go to state 60
    fncall     go to state 61
    exp        go to state 105
    term       go to state 63
    lval       go to state 64
    id         go to state 44


State 83

   40 exp: exp DASH . exp

    AT          shift, and go to state 31
    CARAT       shift, and go to state 32
    CHARLIT     shift, and go to state 50
    DASH        shift, and go to state 51
    FALSE       shift, and go to state 52
    ID          shift, and go to state 16
    INTLITERAL  shift, and go to state 53
    LPAREN      shift, and go to state 54
    NOT         shift, and go to state 55
    NULLPTR     shift, and go to state 56
    STRLITERAL  shift, and go to state 58
    TRUE        shift, and go to state 59

    assignExp  go to state 60
    fncall     go to state 61
    exp        go to state 106
    term       go to state 63
    lval       go to state 64
    id         go to state 44


State 84

   46 exp: exp EQUALS . exp

    AT          shift, and go to state 31
    CARAT       shift, and go to state 32
    CHARLIT     shift, and go to state 50
    DASH        shift, and go to state 51
    FALSE       shift, and go to state 52
    ID          shift, and go to state 16
    INTLITERAL  shift, and go to state 53
    LPAREN      shift, and go to state 54
    NOT         shift, and go to state 55
    NULLPTR     shift, and go to state 56
    STRLITERAL  shift, and go to state 58
    TRUE        shift, and go to state 59

    assignExp  go to state 60
    fncall     go to state 61
    exp        go to state 107
    term       go to state 63
    lval       go to state 64
    id         go to state 44


State 85

   48 exp: exp GREATER . exp
